[gd_scene load_steps=7 format=3 uid="uid://b6mn4mdwjqyri"]

[ext_resource type="Script" path="res://World/House/Scripts/crop_slot.gd" id="1_1jpl6"]
[ext_resource type="Script" path="res://Systems/SystemManagers/InteractionManager/InteractionArea.gd" id="2_4hmtb"]
[ext_resource type="Texture2D" uid="uid://00iuymxlwcv1" path="res://World/House/Art/Outdoor_Decor2.png" id="3_qba6m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjilu"]
size = Vector2(23, 39.75)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_83tbh"]
texture = ExtResource("3_qba6m")
texture_region_size = Vector2i(32, 32)
0:6/0 = 0
0:6/0/z_index = -1
1:6/0 = 0
1:6/0/z_index = -1
2:6/0 = 0
2:6/0/z_index = -1
0:7/0 = 0
0:7/0/texture_origin = Vector2i(0, -32)
0:7/0/z_index = 1
1:7/0 = 0
1:7/0/texture_origin = Vector2i(0, -32)
1:7/0/z_index = 1
2:7/0 = 0
2:7/0/texture_origin = Vector2i(0, -32)
2:7/0/z_index = 1
0:8/0 = 0
0:8/0/texture_origin = Vector2i(0, -32)
0:8/0/z_index = 1
1:8/0 = 0
1:8/0/texture_origin = Vector2i(0, -32)
1:8/0/z_index = 1
2:8/0 = 0
2:8/0/texture_origin = Vector2i(0, -32)
2:8/0/z_index = 1
3:8/0 = 0
3:8/0/texture_origin = Vector2i(0, -32)
3:8/0/z_index = 1
3:7/0 = 0
3:7/0/texture_origin = Vector2i(0, -32)
3:7/0/z_index = 1
1:0/size_in_atlas = Vector2i(1, 2)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -16)
1:0/0/z_index = 1
2:0/size_in_atlas = Vector2i(1, 2)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -16)
2:0/0/z_index = 1
3:0/size_in_atlas = Vector2i(1, 2)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -16)
3:0/0/z_index = 1
4:0/size_in_atlas = Vector2i(1, 2)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -16)
4:0/0/z_index = 1
5:0/size_in_atlas = Vector2i(1, 2)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -16)
5:0/0/z_index = 1
6:0/size_in_atlas = Vector2i(1, 2)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(0, -16)
6:0/0/z_index = 1
7:0/size_in_atlas = Vector2i(1, 2)
7:0/0 = 0
7:0/0/texture_origin = Vector2i(0, -16)
7:0/0/z_index = 1
8:0/size_in_atlas = Vector2i(1, 2)
8:0/0 = 0
8:0/0/texture_origin = Vector2i(0, -16)
8:0/0/z_index = 1
0:2/size_in_atlas = Vector2i(1, 2)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -16)
0:2/0/z_index = 1
1:2/size_in_atlas = Vector2i(1, 2)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -16)
1:2/0/z_index = 1
2:2/size_in_atlas = Vector2i(1, 2)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -16)
2:2/0/z_index = 1
3:2/size_in_atlas = Vector2i(1, 2)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -16)
3:2/0/z_index = 1
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -16)
0:0/0/z_index = 1
9:0/size_in_atlas = Vector2i(3, 4)
9:0/0 = 0
9:0/0/texture_origin = Vector2i(0, 16)
9:0/0/z_index = 1
9:4/size_in_atlas = Vector2i(3, 4)
9:4/0 = 0
9:4/0/texture_origin = Vector2i(0, 16)
9:4/0/z_index = 1
9:8/size_in_atlas = Vector2i(3, 4)
9:8/0 = 0
9:8/0/texture_origin = Vector2i(0, 16)
9:8/0/z_index = 1
8:10/size_in_atlas = Vector2i(1, 2)
8:10/0 = 0
8:10/0/texture_origin = Vector2i(0, -16)
8:10/0/z_index = 1
7:10/size_in_atlas = Vector2i(1, 2)
7:10/0 = 0
7:10/0/texture_origin = Vector2i(0, -16)
7:10/0/z_index = 1
6:10/size_in_atlas = Vector2i(1, 2)
6:10/0 = 0
6:10/0/texture_origin = Vector2i(0, -16)
6:10/0/z_index = 1
5:10/size_in_atlas = Vector2i(1, 2)
5:10/0 = 0
5:10/0/texture_origin = Vector2i(0, -16)
5:10/0/z_index = 1
3:9/size_in_atlas = Vector2i(1, 3)
3:9/0 = 0
3:9/0/z_index = 1
2:9/size_in_atlas = Vector2i(1, 3)
2:9/0 = 0
2:9/0/z_index = 1
1:9/size_in_atlas = Vector2i(1, 3)
1:9/0 = 0
1:9/0/z_index = 1
0:9/size_in_atlas = Vector2i(1, 3)
0:9/0 = 0
0:9/0/z_index = 1
5:7/size_in_atlas = Vector2i(1, 3)
5:7/0 = 0
5:7/0/z_index = 1
6:7/size_in_atlas = Vector2i(1, 3)
6:7/0 = 0
6:7/0/z_index = 1
7:7/size_in_atlas = Vector2i(1, 3)
7:7/0 = 0
7:7/0/z_index = 1
6:4/size_in_atlas = Vector2i(1, 2)
6:4/0 = 0
6:4/0/texture_origin = Vector2i(0, -16)
6:4/0/z_index = 1
5:4/size_in_atlas = Vector2i(1, 2)
5:4/0 = 0
5:4/0/texture_origin = Vector2i(0, -16)
5:4/0/z_index = 1
4:4/size_in_atlas = Vector2i(1, 2)
4:4/0 = 0
4:4/0/texture_origin = Vector2i(0, -16)
4:4/0/z_index = 1
3:4/size_in_atlas = Vector2i(1, 2)
3:4/0 = 0
3:4/0/texture_origin = Vector2i(0, -16)
3:4/0/z_index = 1
2:4/size_in_atlas = Vector2i(1, 2)
2:4/0 = 0
2:4/0/texture_origin = Vector2i(0, -16)
2:4/0/z_index = 1
1:4/size_in_atlas = Vector2i(1, 2)
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -16)
1:4/0/z_index = 1
0:4/size_in_atlas = Vector2i(1, 2)
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, -16)
0:4/0/z_index = 1
3:6/0 = 0

[sub_resource type="TileSet" id="TileSet_3mxpf"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 6
sources/0 = SubResource("TileSetAtlasSource_83tbh")

[node name="CropSlot" type="Node2D"]
script = ExtResource("1_1jpl6")
metadata/_edit_group_ = true

[node name="InteractionArea" type="Area2D" parent="." node_paths=PackedStringArray("sprite")]
position = Vector2(16, 18)
collision_layer = 0
collision_mask = 2
script = ExtResource("2_4hmtb")
sprite = NodePath("../CropLayer")
interactable_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_hjilu")
debug_color = Color(0.676505, 0.65607, 0.356049, 0.245)

[node name="CropLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 6, 0, 0, 0)
tile_set = SubResource("TileSet_3mxpf")

[node name="GrowthTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
